--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="initial-scale=1"/>
 </head>
 <body>
+<div id="init">
+    <div><span class="brand">DHIS 2</span>PIVOT TABLE</div>
+    <div class="spinner"></div>
+</div>
 <script src="browser-polyfill.min.js"></script>
 <script src="jquery.min.js"></script>
 
