--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="init">
-    <div><span class="brand">DHIS 2</span>PIVOT TABLE</div>
+    <div><span class="brand">DHIS 2</span>Pivot Tables</div>
     <div class="spinner"></div>
 </div>
 <script src="browser-polyfill.min.js"></script>
