--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>DHIS 2 Pivot</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1"/>
 </head>
 <body>
