--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="inittext"><span class="brand">DHIS 2</span>Pivot Tables</div>
     <div class="spinner"></div>
 </div>
-<script src="browser-polyfill.min.js"></script>
+<script src="polyfill.min.js"></script>
 <script src="jquery.min.js"></script>
 
 <script type="text/javascript" src="dhis2/jquery.calendars.min.js"></script>
