--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script type="text/javascript" src="extjs/ext-all.js"></script>
 <script type="text/javascript" src="extjs/ext-ux/layout/component/form/MultiSelect.js"></script>
 <script type="text/javascript" src="extjs/ext-ux/form/MultiSelect.js"></script>
+<script type="text/javascript" src="extjs/ext-overrides/ext-override-loadmask.js"></script>
 
 <script src="app.js"></script>
 </body>
