added plugin javascript

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <script type="text/javascript" src="extjs/ext-ux/layout/component/form/MultiSelect.js"></script>
 <script type="text/javascript" src="extjs/ext-ux/form/MultiSelect.js"></script>
 <script type="text/javascript" src="extjs/ext-overrides/ext-override-loadmask.js"></script>
+<!-- AQP: better to load a local dependency -->
+<script type="text/javascript" src="http://dhis2-cdn.org/v221/plugin/table.js"></script>
 
 <script src="app.js"></script>
 </body>
