--- a/plugin.html
+++ b/plugin.html
@@ -15,7 +15,7 @@
 <div class="r" id="r3"></div>
 
 <script>
-    var r1 = { id: "tWg9OiyV7mu", el: "r1"};
+    var r1 = { id: "WAZVxMaxohD", el: "r1"};
     var r2 = { id: "SEMVWsnVblY", el: "r2"};
     var r3 = { id: "KJFbpIymTAo", el: "r3"};
 
