--- a/plugin.html
+++ b/plugin.html
@@ -15,9 +15,9 @@
 <div class="r" id="r3"></div>
 
 <script>
-    var r1 = { id: "WAZVxMaxohD", el: "r1"};
-    var r2 = { id: "SEMVWsnVblY", el: "r2"};
-    var r3 = { id: "KJFbpIymTAo", el: "r3"};
+    var r1 = { id: "WAZVxMaxohD", el: "r1", displayDensity: "COMFORTABLE" };
+    var r2 = { id: "SEMVWsnVblY", el: "r2", displayDensity: "COMFORTABLE" };
+    var r3 = { id: "KJFbpIymTAo", el: "r3", displayDensity: "COMFORTABLE" };
 
     reportTablePlugin.url = '//localhost:8080';
     reportTablePlugin.username = 'admin';
