--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>DHIS 2 Pivot</title>
+    <title>DHIS 2 Pivot Tables</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1"/>
 </head>
 <body>
 <div id="init">
-    <div id="inittext"><span class="brand">DHIS 2</span>Pivot Table</div>
+    <div id="inittext"><span class="brand">DHIS 2</span>Pivot Tables</div>
     <div class="spinner"></div>
 </div>
 <script src="jquery.min.js"></script>
