--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div id="inittext"><span class="brand">DHIS 2</span>Pivot Tables</div>
     <div class="spinner"></div>
 </div>
+
 <script src="jquery.min.js"></script>
+<script src="jquery-migrate.min.js"></script>
 
 <script type="text/javascript" src="dhis2/jquery.calendars.min.js"></script>
 <script type="text/javascript" src="dhis2/jquery.calendars.plus.min.js"></script>
